<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/night_mode"
        android:title="@string/night_mode"
        android:icon="@drawable/ic_lightbulb_outline_black_24dp"/>

    <item
        android:id="@+id/feedback"
        android:title="@string/feedback"
        android:icon="@drawable/ic_border_color_black_24dp"/>
    <item
        android:id="@+id/scan"
        android:title="@string/scan"
        android:icon="@drawable/ic_crop_free_black_24dp"/>
    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        android:icon="@drawable/ic_error_black_24dp"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_sort_black_24dp"/>


</menu>